2007-08-27  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclCompExpr.c:	Call TclCompileSyntaxError() when
	expression syntax errors are found when compiling expressions.  With
	this in place, convert TclCompileExpr to return void, since there's no
	longer any need to report TCL_ERROR.
	* generic/tclCompile.c:	Update callers.
	* generic/tclExecute.c:

	* generic/tclCompCmds.c:	New routine TclCompileSyntaxError()
	* generic/tclCompile.h:	to directly compile bytecodes that report a
	* generic/tclCompile.c:	syntax error, rather than (ab)use a call to
	TclCompileReturnCmd.  Also, undo the most recent commit that papered
	over some issues with that (ab)use.  New routine produces a new
	opcode INST_SYNTAX, which is a minor variation of INST_RETURN_IMM.
	Also a bit of constification.

	* generic/tclCompile.c:	Move the deallocation of local LiteralTable
	* generic/tclCompExpr.c:	entries into TclFreeCompileEnv().
	* generic/tclExecute.c:	Update callers.

	* generic/tclCompExpr.c:	Force numeric and boolean literals
	in expressions to register with their intreps intact, even if that
	means overwriting existing intreps in already registered literals.

2007-08-25  Kevin B. Kenny  <kennykb@acm.org>

	* generic/tclExecute.c (TclExecuteByteCode): Added code to handle
	* tests/expr.test (expr-23.48-53)	     integer exponentiation
	that results in 32- and 64-bit integer results, avoiding calls to
	wide integer exponentiation routines in this common case.
	[Bug 1767293]

	* library/clock.tcl (ParseClockScanFormat): Modified code to allow
	* tests/clock.test (clock-60.*):            case-insensitive
	matching of time zone and month names. [Bug 1781282]
	
	
2007-08-24  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclCompExpr.c:	Register literals found in expressions
	* tests/compExpr.test:	to restore literal sharing.  Preserve numeric
	intreps when literals are created for the first time.  Correct memleak
	in ExecConstantExprTree() and add test for the leak.
